update resume link

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </div>
                 <div class="space-x-4">
                     <a href="#contact" class="inline-block bg-[#3b82f6] text-white font-semibold py-3 px-8 rounded-full hover:bg-blue-600 transition duration-300 shadow-lg">Connect Now</a>
-                    <a href="#education-awards" class="inline-block bg-gray-700 text-white font-semibold py-3 px-8 rounded-full hover:bg-gray-600 transition duration-300 shadow-lg">View Resume</a>
+                    <a href="#education-awards" class="inline-block bg-gray-700 text-white font-semibold py-3 px-8 rounded-full hover:bg-gray-600 transition duration-300 shadow-lg">View Projects</a>
                 </div>
             </div>
         </section>
