--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
                         <p><i data-lucide="mail" class="inline-block w-5 h-5 mr-3 text-[#3b82f6]"></i> Email: dineshprajapati5033@gmail.com</p>
                         <p><i data-lucide="phone" class="inline-block w-5 h-5 mr-3 text-[#3b82f6]"></i> Phone: 8140747573</p>
                         <p><i data-lucide="map-pin" class="inline-block w-5 h-5 mr-3 text-[#3b82f6]"></i> Location: Ahmedabad</p>
+                        <p><i data-lucide="building" class="inline-block w-5 h-5 mr-3 text-[#3b82f6]"></i> Previous Company: Rocktechnolabs(01-06-2019-26-08-2025)</p>
                         <p><i data-lucide="award" class="inline-block w-5 h-5 mr-3 text-[#3b82f6]"></i> Achievement: Adobe certified professional - Adobe Commerce Developer</p>
                     </div>
                 </div>
