--- a/index.html
+++ b/index.html
@@ -114,10 +114,9 @@
         <section id="about" class="py-16">
             <h2 class="section-header">About Me</h2>
             <div class="grid md:grid-cols-3 gap-8 items-center">
-                <div class="md:col-span-1">
-                    <!-- Placeholder for profile image -->
-                    <div class="w-48 h-48 mx-auto md:mx-0 bg-gray-700 rounded-full flex items-center justify-center text-4xl font-bold text-gray-300 border-4 border-blue-500">
-                        DP
+               <div class="md:col-span-1">
+                    <div class="w-48 h-48 mx-auto md:mx-0 rounded-full overflow-hidden border-4 border-blue-500">
+                      <img src="images/DineshPrajapati.jpg" alt="Profile Picture" class="w-full h-full object-cover object-top">
                     </div>
                 </div>
                 <div class="md:col-span-2 space-y-4">
