update changes of portfolio

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     
     <main class="container mx-auto px-4 sm:px-6 lg:px-8">
 
-        <section id="hero" class="min-h-screen flex items-center pt-24 pb-12">
+        <section id="hero" class="flex items-center pt-10">
             <div class="text-center w-full">
                 <p class="text-xl text-gray-400 mb-4">Hello, I'm</p>
                 <h1 class="text-6xl sm:text-7xl lg:text-8xl font-extrabold text-white mb-4">DINESH PRAJAPATI</h1>
@@ -101,8 +101,10 @@
                     <span class="inline-block w-1 h-8 bg-[#3b82f6] animate-pulse"></span>
                 </div>
                 <div class="space-x-4">
-                    <a href="#contact" class="inline-block bg-[#3b82f6] text-white font-semibold py-3 px-8 rounded-full hover:bg-blue-600 transition duration-300 shadow-lg">Connect Now</a>
-                    <a href="#projects" class="inline-block bg-gray-700 text-white font-semibold py-3 px-8 rounded-full hover:bg-gray-600 transition duration-300 shadow-lg">View Projects</a>
+                    <div class="flex flex-col space-y-4 sm:flex-row sm:space-y-0 sm:space-x-4 justify-center">
+                        <a href="#contact" class="inline-block bg-[#3b82f6] text-white font-semibold py-3 px-8 rounded-full hover:bg-blue-600 transition duration-300 shadow-lg w-full sm:w-auto">Connect Now</a>
+                        <a href="#projects" class="inline-block bg-gray-700 text-white font-semibold py-3 px-8 rounded-full hover:bg-gray-600 transition duration-300 shadow-lg w-full sm:w-auto">View Projects</a>
+                    </div>
                 </div>
             </div>
         </section>
